[gd_scene load_steps=5 format=3 uid="uid://1j835kpsc63t"]

[ext_resource type="Script" path="res://scenes/gui.gd" id="1_55ulw"]
[ext_resource type="AudioStream" uid="uid://cmdd22pxvoyyl" path="res://assets/sounds/explosionCrunch_001.ogg" id="2_s36xh"]
[ext_resource type="AudioStream" uid="uid://doqdx3pjcf2rx" path="res://assets/sounds/powerUp2.ogg" id="3_hysx3"]
[ext_resource type="AudioStream" uid="uid://bdg0f0russde6" path="res://assets/sounds/doorOpen_1.ogg" id="4_6cdr0"]

[node name="Gui" type="CanvasLayer"]
script = ExtResource("1_55ulw")

[node name="LabelLevel" type="Label" parent="."]
offset_left = 16.0
offset_top = 8.0
offset_right = 56.0
offset_bottom = 31.0
text = "Level: "

[node name="Level" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 72.0
offset_top = 8.0
offset_right = 121.0
offset_bottom = 31.0
text = "1"

[node name="LabelGems" type="Label" parent="."]
offset_left = 16.0
offset_top = 32.0
offset_right = 65.0
offset_bottom = 55.0
text = "Gems:"

[node name="Gems" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 72.0
offset_top = 32.0
offset_right = 121.0
offset_bottom = 55.0
text = "0"

[node name="PanelContainerDie" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -116.0
offset_right = 208.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="PanelContainerDie"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "YOU DIED"
horizontal_alignment = 1

[node name="PanelContainerWin" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -116.0
offset_right = 208.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="PanelContainerWin"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "YOU WON"
horizontal_alignment = 1

[node name="PanelContainerFinish" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -116.0
offset_right = 208.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="PanelContainerFinish"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "YOU FINISHED THE GAME
CONGRATULATION"
horizontal_alignment = 1

[node name="AudioStreamPlayerExplosion" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_s36xh")

[node name="AudioStreamPlayerGem" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_hysx3")

[node name="AudioStreamPlayerExit" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_6cdr0")
